# rasterization-renderer

./: .gitignore  CMakeLists.txt  README.md  geometry.cpp  geometry.h  geometry.tpp  linalg.cpp  main  main.cpp  matrix.cpp  matrix.h  matrix.tpp  point.h  point.tpp  test.cpp  test.mesh  triangle.mesh  triangle_single.mesh  util.h  vector.cpp  vector.h  vector.tpp
src/: CMakeLists.txt  camera.cpp  camera.h  geom_util.cpp  geom_util.h  geometry.cpp  geometry.h  main.cpp  obj.cpp  obj.h  point.h  point.tpp  ppm.cpp  ppm.h  util.h  vector.h  vector.tpp
